z-index quick fix. Use titles for image captions

--- a/css/pages.css
+++ b/css/pages.css
@@ -441,7 +441,6 @@ svg path:hover{
 
     display: none;
 
-    z-index: 5;
 }
 
 #carousel_controls{
@@ -449,7 +448,6 @@ svg path:hover{
     width: 100%;
     height: 100%;
 
-    z-index: 6;
 }
 
 .gallery_button{
